<resources>
    <string name="app_name">My Application MVVM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="create">create</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="breed">breed</string>
    <string name="age">age</string>
    <string name="picture_url">picture - url</string>
</resources>